Adding and removing rows works as expected.

--- a/Moclo_Assy.ipynb
+++ b/Moclo_Assy.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import jupyter_core\n",
@@ -53,26 +55,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6281eff358a440658d5db13168debb14",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_dom_classes', '_model_module', '_model_module_version', '_model_name', '_options_labels', '_view_count', '_view_module', '_view_module_version', '_view_name', 'description', 'disabled', 'index', 'layout', 'style']\n"
+     ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80d14e0ab133440c85554625f7966075",
+       "model_id": "175040a52e904eb9932a8c977e8fd755",
        "version_major": 2,
        "version_minor": 0
       },
