--- a/Moclo_Assy.ipynb
+++ b/Moclo_Assy.ipynb
@@ -13,24 +13,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dfs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-2f178960af29>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmamo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakeAssemblyFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Documents\\GitHub\\makeMocloAssy\\makeMocloAssy.py\u001b[0m in \u001b[0;36mmakeAssemblyFile\u001b[1;34m(mypath)\u001b[0m\n\u001b[0;32m    940\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmakeAssemblyFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmypath\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\".\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    941\u001b[0m     \u001b[1;34m\"\"\"this function will assist the user with making assembly .csv files!\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 942\u001b[1;33m     \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0massemblyFileMaker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmypath\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\".\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    943\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    944\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmakeInteractive\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmypath\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\".\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\GitHub\\makeMocloAssy\\makeMocloAssy.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, mypath)\u001b[0m\n\u001b[0;32m    755\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPlateRowsCols\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m24\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    756\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmypath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmypath\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 757\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfindPartsListsDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmypath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"partslist\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    758\u001b[0m         \u001b[1;31m#txtdisabl = False\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    759\u001b[0m         \u001b[0massemblies\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\GitHub\\makeMocloAssy\\makeMocloAssy.py\u001b[0m in \u001b[0;36mfindPartsListsDict\u001b[1;34m(path, teststr)\u001b[0m\n\u001b[0;32m    381\u001b[0m                 \u001b[1;31m#print(dfs)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    382\u001b[0m                 \u001b[1;31m#print(dfs.keys())\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 383\u001b[1;33m                 \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mteststr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdfs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    384\u001b[0m                     \u001b[0mexpts\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfle\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    385\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dfs' is not defined"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91812bd3f1e84a36b61c8c955fe07456",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Text(value='untitled', description='Assembly File Name:', placeholder='type something'), VBox(c…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4817aca36319481896c18898aa4fe966",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Label(value='promoter'), Dropdown(index=27, layout=Layout(height='30px', width='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done!\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>promoter</th>\n",
+       "      <th>UTR</th>\n",
+       "      <th>CDS</th>\n",
+       "      <th>Terminator</th>\n",
+       "      <th>vector1</th>\n",
+       "      <th>vector2</th>\n",
+       "      <th>enzyme</th>\n",
+       "      <th>name</th>\n",
+       "      <th>targwell</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pveg</td>\n",
+       "      <td>bacRBS</td>\n",
+       "      <td>RFP</td>\n",
+       "      <td>T13m</td>\n",
+       "      <td>AmpEF</td>\n",
+       "      <td>P15aFA</td>\n",
+       "      <td>BsaI</td>\n",
+       "      <td>testy1</td>\n",
+       "      <td>A1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pveg</td>\n",
+       "      <td>bacRBS</td>\n",
+       "      <td>deCFP</td>\n",
+       "      <td>T13m</td>\n",
+       "      <td>AmpEF</td>\n",
+       "      <td>P15aFA</td>\n",
+       "      <td>BsaI</td>\n",
+       "      <td>testy2</td>\n",
+       "      <td>A2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  promoter     UTR    CDS Terminator vector1 vector2 enzyme    name targwell\n",
+       "0     Pveg  bacRBS    RFP       T13m   AmpEF  P15aFA   BsaI  testy1       A1\n",
+       "1     Pveg  bacRBS  deCFP       T13m   AmpEF  P15aFA   BsaI  testy2       A2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -45,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4ba2ede05ab45b08f56a9469e5f8e4b",
+       "model_id": "e61595b0974a41838b38f0a94e89a792",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,33 +146,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving in folder ./DNA/untitled\n",
-      "assembling with BsaI\n",
-      "===> transfer from B6, plate ASSGGA04 to A1, 266 nl\n",
-      "===> transfer from B18, plate ASSGGA04 to A1, 266 nl\n",
-      "===> transfer from C15, plate ASSGGA04 to A1, 330 nl\n",
-      "===> transfer from B12, plate ASSGGA04 to A1, 266 nl\n",
-      "===> transfer from A1, plate ASSGGA04 to A1, 160 nl\n",
-      "===> transfer from A5, plate ASSGGA04 to A1, 160 nl\n",
-      "Parts in construct test1\n",
-      "Detected 1 possible assembly\n",
-      "\n",
-      "assembling with BsaI\n",
-      "===> transfer from B6, plate ASSGGA04 to A2, 266 nl\n",
-      "===> transfer from B18, plate ASSGGA04 to A2, 266 nl\n",
-      "===> transfer from B17, plate ASSGGA04 to A2, 217 nl\n",
-      "===> transfer from B12, plate ASSGGA04 to A2, 266 nl\n",
-      "===> transfer from A1, plate ASSGGA04 to A2, 160 nl\n",
-      "===> transfer from A5, plate ASSGGA04 to A2, 160 nl\n",
-      "Parts in construct test2\n",
-      "Detected 1 possible assembly\n",
-      "\n"
-     ]
     },
     {
      "data": {
@@ -113,26 +177,146 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A1</td>\n",
-       "      <td>test1</td>\n",
+       "      <td>O1</td>\n",
+       "      <td>Lnt5-X</td>\n",
        "      <td>False</td>\n",
-       "      <td>1162</td>\n",
+       "      <td>438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A2</td>\n",
-       "      <td>test2</td>\n",
+       "      <td>O2</td>\n",
+       "      <td>Bqinscaff4-5</td>\n",
        "      <td>False</td>\n",
-       "      <td>1091</td>\n",
+       "      <td>447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>O3</td>\n",
+       "      <td>Lvtrig5-x</td>\n",
+       "      <td>False</td>\n",
+       "      <td>428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>O4</td>\n",
+       "      <td>Bqivscaff4-5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>O5</td>\n",
+       "      <td>Lntrig8-x</td>\n",
+       "      <td>False</td>\n",
+       "      <td>438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>O6</td>\n",
+       "      <td>Lvtrig8-x</td>\n",
+       "      <td>False</td>\n",
+       "      <td>428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>O7</td>\n",
+       "      <td>Bg1nscaff6-7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>O8</td>\n",
+       "      <td>Cg2nscaff7-8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>O9</td>\n",
+       "      <td>Bg1vscaff6-7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>O10</td>\n",
+       "      <td>Cg2vscaff7-8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>O11</td>\n",
+       "      <td>Cg1nscaff6-7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>O12</td>\n",
+       "      <td>Bg2nscaff7-8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>O13</td>\n",
+       "      <td>Cg1vscaff6-7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>O14</td>\n",
+       "      <td>Bg2vscaff7-8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>437</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  well   part  circular  length\n",
-       "0   A1  test1     False    1162\n",
-       "1   A2  test2     False    1091"
+       "   well          part  circular  length\n",
+       "0    O1        Lnt5-X     False     438\n",
+       "1    O2  Bqinscaff4-5     False     447\n",
+       "2    O3     Lvtrig5-x     False     428\n",
+       "3    O4  Bqivscaff4-5     False     437\n",
+       "4    O5     Lntrig8-x     False     438\n",
+       "5    O6     Lvtrig8-x     False     428\n",
+       "6    O7  Bg1nscaff6-7     False     457\n",
+       "7    O8  Cg2nscaff7-8     False     558\n",
+       "8    O9  Bg1vscaff6-7     False     447\n",
+       "9   O10  Cg2vscaff7-8     False     548\n",
+       "10  O11  Cg1nscaff6-7     False     568\n",
+       "11  O12  Bg2nscaff7-8     False     447\n",
+       "12  O13  Cg1vscaff6-7     False     558\n",
+       "13  O14  Bg2vscaff7-8     False     437"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<a href='.\\DNA\\180503_newscaff_grnassy\\180503_newscaff_grnassy.csv' target='_blank'>.\\DNA\\180503_newscaff_grnassy\\180503_newscaff_grnassy.csv</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\Andrey\\Documents\\GitHub\\makeMocloAssy\\DNA\\180503_newscaff_grnassy\\180503_newscaff_grnassy.csv"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<a href='.\\output\\output.csv' target='_blank'>.\\output\\output.csv</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\Andrey\\Documents\\GitHub\\makeMocloAssy\\output\\output.csv"
       ]
      },
      "metadata": {},
@@ -140,15 +324,31 @@
     }
    ],
    "source": [
-    "mamo.makeInteractive()"
+    "mamo.makeInteractive(printstuff=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='.\\DNA\\untitled\\untitled.csv' target='_blank'>.\\DNA\\untitled\\untitled.csv</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\Andrey\\Documents\\GitHub\\makeMocloAssy\\DNA\\untitled\\untitled.csv"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import FileLink, FileLinks\n",
+    "display(FileLink(\".\\\\DNA\\\\untitled\\\\untitled.csv\"))"
+   ]
   }
  ],
  "metadata": {
